레디스 연동 추가