@@ -22,6 +22,9 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 import org.team12.teamproject.dto.StockCandleDto;
+import org.springframework.scheduling.annotation.Scheduled;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.core.type.TypeReference;
 
 @Slf4j
 @Service
@@ -31,6 +34,7 @@ public class StockService {
     private final RestTemplate restTemplate = new RestTemplate();
     private final StockRepository stockRepository;
     private final RedisTemplate<String, String> redisTemplate;
+    private final ObjectMapper objectMapper = new ObjectMapper();
 
     @Value("${kis.api.url}")
     private String apiUrl;
@@ -87,9 +91,39 @@ public class StockService {
         long totalElements = stockRepository.count();
         int totalPages = (int) Math.ceil((double) totalElements / size);
 
-        List<StockResponseDto> content = stockList.stream().map(stock -> {
-            return getStockDetail(stock.getStockCode());
-        }).toList();
+        // Redis 벌크 조회를 위해 키 목록 생성
+        List<String> keys = stockList.stream()
+                .map(s -> "stock:price:" + s.getStockCode())
+                .collect(Collectors.toList());
+        
+        List<String> cachedValues = redisTemplate.opsForValue().multiGet(keys);
+
+        List<StockResponseDto> content = new ArrayList<>();
+        for (int i = 0; i < stockList.size(); i++) {
+            Stock stock = stockList.get(i);
+            String cachedData = (cachedValues != null && i < cachedValues.size()) ? cachedValues.get(i) : null;
+            
+            StockResponseDto.StockResponseDtoBuilder builder = StockResponseDto.builder()
+                    .symbol(stock.getStockCode())
+                    .name(stock.getStockName());
+
+            if (cachedData != null) {
+                String[] parts = cachedData.split(":");
+                if (parts.length >= 4) {
+                    content.add(builder
+                            .currentPrice(parts[0])
+                            .changeAmount(parts[1])
+                            .changeRate(parts[2])
+                            .volume(parts[3])
+                            .build());
+                    continue;
+                }
+            }
+            
+            // 캐시 없으면 개별 조회 (또는 기본값)
+            // 백그라운드 작업이 활성화되어 있으므로 거의 발생하지 않음
+            content.add(getStockDetail(stock.getStockCode()));
+        }
 
         return PageResponseDto.<StockResponseDto>builder()
                 .content(content)
@@ -105,17 +139,25 @@ public class StockService {
             String cachedData = redisTemplate.opsForValue().get(cacheKey);
             if (cachedData != null) {
                 String[] parts = cachedData.split(":");
-                return StockResponseDto.builder()
-                        .symbol(symbol)
-                        .name(stockRepository.findByStockCode(symbol).map(Stock::getStockName).orElse("이름없음"))
-                        .currentPrice(parts[0])
-                        .changeAmount(parts[1])
-                        .changeRate(parts[2])
-                        .volume(parts[3])
-                        .build();
+                if (parts.length >= 4) {
+                    return StockResponseDto.builder()
+                            .symbol(symbol)
+                            .name(stockRepository.findByStockCode(symbol).map(Stock::getStockName).orElse("이름없음"))
+                            .currentPrice(parts[0])
+                            .changeAmount(parts[1])
+                            .changeRate(parts[2])
+                            .volume(parts[3])
+                            .build();
+                } else {
+                    log.warn("Redis 캐시 포맷 불일치: {}", cachedData);
+                    redisTemplate.delete(cacheKey); // 비정상 캐시 삭제
+                }
             }
         } catch (Exception e) {
-            log.warn("Redis 캐시 확인 실패 (서버 미구동 등): {}", e.getMessage());
+            log.warn("Redis 캐시 파싱 실패 ({}): {}", cacheKey, e.getMessage());
+            try {
+                redisTemplate.delete(cacheKey);
+            } catch (Exception ignore) {}
         }
 
         StockResponseDto dto = fetchPriceFromKisApi(symbol);
@@ -136,54 +178,190 @@ public class StockService {
     }
 
     /**
-     * 주식 캔들 데이터(일봉) 조회
+     * 주식 캔들 데이터 조회 (기간별 동적 호출 및 캐싱 적용)
+     * period: 1D(5분), 1W(일), 1M(일), 6M(월), 1Y(월)
      */
-    public List<StockCandleDto> getStockHistory(String symbol) {
+    public List<StockCandleDto> getStockHistory(String symbol, String period) {
+        String cacheKey = "stock:history:" + symbol + ":" + period;
+
+        // 1. 캐시 확인
+        try {
+            String cachedData = redisTemplate.opsForValue().get(cacheKey);
+            if (cachedData != null) {
+                TypeReference<List<StockCandleDto>> typeRef = new TypeReference<>() {};
+                return objectMapper.readValue(cachedData, typeRef);
+            }
+        } catch (Exception e) {
+            log.warn("Redis 캔들 캐시 확인 실패: {}", e.getMessage());
+        }
+
+        // 2. KIS API 호출
+        List<StockCandleDto> resultData = new ArrayList<>();
         try {
             ensureAccessToken();
 
             LocalDateTime now = LocalDateTime.now();
-            String endDate = now.format(DateTimeFormatter.ofPattern("YYYYMMDD"));
-            String startDate = now.minusDays(30).format(DateTimeFormatter.ofPattern("YYYYMMDD"));
+            String endDate = now.format(DateTimeFormatter.ofPattern("yyyyMMdd"));
+            
+            if ("1D".equals(period)) {
+                resultData = fetchIntradayHistory(symbol, "0005"); // 5분
+            } else {
+                String periodCode = "D"; // 기본 일봉
+                String startDate;
 
-            String url = apiUrl + "/uapi/domestic-stock/v1/quotations/inquire-daily-itemchartprice"
+                if ("1W".equals(period)) {
+                    startDate = now.minusDays(7).format(DateTimeFormatter.ofPattern("yyyyMMdd"));
+                } else if ("1M".equals(period)) {
+                    startDate = now.minusDays(31).format(DateTimeFormatter.ofPattern("yyyyMMdd"));
+                } else if ("6M".equals(period)) {
+                    periodCode = "M";
+                    startDate = now.minusMonths(6).format(DateTimeFormatter.ofPattern("yyyyMMdd"));
+                } else if ("1Y".equals(period)) {
+                    periodCode = "M";
+                    startDate = now.minusYears(1).format(DateTimeFormatter.ofPattern("yyyyMMdd"));
+                } else {
+                    startDate = now.minusDays(30).format(DateTimeFormatter.ofPattern("yyyyMMdd"));
+                }
+
+                String url = apiUrl + "/uapi/domestic-stock/v1/quotations/inquire-daily-itemchartprice"
+                        + "?FID_COND_MRKT_DIV_CODE=J"
+                        + "&FID_INPUT_ISCD=" + symbol
+                        + "&FID_INPUT_DATE_1=" + startDate
+                        + "&FID_INPUT_DATE_2=" + endDate
+                        + "&FID_PERIOD_DIV_CODE=" + periodCode
+                        + "&FID_ORG_ADJ_PRC=0";
+
+                HttpHeaders headers = new HttpHeaders();
+                headers.set("authorization", "Bearer " + cachedAccessToken);
+                headers.set("appkey", appKey);
+                headers.set("appsecret", appSecret);
+                headers.set("tr_id", "FHKST03010100"); 
+
+                HttpEntity<String> entity = new HttpEntity<>(headers);
+                ResponseEntity<Map> response = restTemplate.exchange(url, HttpMethod.GET, entity, Map.class);
+
+                Map<String, Object> body = response.getBody();
+                if (body != null && body.containsKey("output2")) {
+                    List<Map<String, Object>> output2 = (List<Map<String, Object>>) body.get("output2");
+                    if (output2 != null) {
+                        resultData = output2.stream().map(data -> StockCandleDto.builder()
+                                .date((String) data.get("stck_bsop_date"))
+                                .open((String) data.get("stck_oprc"))
+                                .high((String) data.get("stck_hgpr"))
+                                .low((String) data.get("stck_lwpr"))
+                                .close((String) data.get("stck_clpr"))
+                                .volume((String) data.get("acml_vol"))
+                                .build())
+                                .collect(Collectors.toList());
+                    }
+                }
+            }
+        } catch (Exception e) {
+            log.error("캔들 데이터 API 호출 에러 ({}): {}", period, e.getMessage());
+        }
+
+        // 3. 정상 조회 시 캐시 저장
+        if (!resultData.isEmpty()) {
+            try {
+                String jsonData = objectMapper.writeValueAsString(resultData);
+                Duration ttl = "1D".equals(period) ? Duration.ofMinutes(1) : Duration.ofMinutes(10);
+                redisTemplate.opsForValue().set(cacheKey, jsonData, ttl);
+            } catch (Exception e) {
+                log.warn("Redis 캔들 캐시 저장 실패: {}", e.getMessage());
+            }
+        }
+
+        return resultData;
+    }
+
+    private List<StockCandleDto> fetchIntradayHistory(String symbol, String intervalCode) {
+        try {
+            ensureAccessToken();
+
+            String url = apiUrl + "/uapi/domestic-stock/v1/quotations/inquire-time-itemchartprice"
                     + "?FID_COND_MRKT_DIV_CODE=J"
                     + "&FID_INPUT_ISCD=" + symbol
-                    + "&FID_INPUT_DATE_1=" + startDate
-                    + "&FID_INPUT_DATE_2=" + endDate
-                    + "&FID_PERIOD_DIV_CODE=D"
-                    + "&FID_ORG_ADJ_PRC=0";
+                    + "&FID_PW_DATA_IN_YN=N"
+                    + "&FID_INPUT_HOUR_1=";
+
+            log.info("KIS 분봉 API 요청 URL: {}", url);
 
             HttpHeaders headers = new HttpHeaders();
-            headers.setContentType(MediaType.APPLICATION_JSON);
             headers.set("authorization", "Bearer " + cachedAccessToken);
             headers.set("appkey", appKey);
             headers.set("appsecret", appSecret);
-            headers.set("tr_id", "FHKST03010100"); // 국내주식 기간별 시세(일/주/월)
+            headers.set("tr_id", "FHKST03010200"); 
 
             HttpEntity<String> entity = new HttpEntity<>(headers);
             ResponseEntity<Map> response = restTemplate.exchange(url, HttpMethod.GET, entity, Map.class);
+            
+            Map<String, Object> body = response.getBody();
+            String bodyStr = objectMapper.writeValueAsString(body);
+            log.info("KIS 분봉 API 전체 응답: {}", bodyStr);
 
-            if (response.getBody() != null && response.getBody().containsKey("output2")) {
-                List<Map<String, Object>> output2 = (List<Map<String, Object>>) response.getBody().get("output2");
-                return output2.stream().map(data -> StockCandleDto.builder()
-                        .date((String) data.get("stck_bsop_date"))
-                        .open((String) data.get("stck_oprc"))
-                        .high((String) data.get("stck_hgpr"))
-                        .low((String) data.get("stck_lwpr"))
-                        .close((String) data.get("stck_clpr"))
-                        .volume((String) data.get("acml_vol"))
-                        .build())
-                        .collect(Collectors.toList());
+            if (body != null && body.containsKey("output2")) {
+                List<Map<String, Object>> output2 = (List<Map<String, Object>>) body.get("output2");
+                if (output2 != null) {
+                    return output2.stream().map(data -> StockCandleDto.builder()
+                            .date((String) data.get("stck_bsop_date"))
+                            .time((String) data.get("stck_cntg_hour"))
+                            .open((String) data.get("stck_oprc"))
+                            .high((String) data.get("stck_hgpr"))
+                            .low((String) data.get("stck_lwpr"))
+                            .close((String) data.get("stck_prpr")) 
+                            .volume((String) data.get("cntg_vol")) 
+                            .build())
+                            .collect(Collectors.toList());
+                }
             }
-        } catch (org.springframework.web.client.HttpClientErrorException.Unauthorized e) {
-            log.warn("KIS 토큰 만료 또는 무효(401). 캔들 데이터 조회 재시도합니다.");
-            clearTokenCache();
-            return getStockHistory(symbol); // 1회 재시도
         } catch (Exception e) {
-            log.error("캔들 데이터 조회 에러: {}", e.getMessage());
+            log.error("분봉 데이터 조회 에러: {}", e.getMessage());
         }
         return new ArrayList<>();
+    }
+
+    // 기존 하위 호환성을 위해 유지
+    public List<StockCandleDto> getStockHistory(String symbol) {
+        return getStockHistory(symbol, "1M");
+    }
+
+    /**
+     * [백그라운드 작업] 1분마다 모든 주식의 시세를 KIS API에서 가져와 Redis에 업데이트합니다.
+     * 사용자가 주식 목록(Dashboard)에 들어갔을 때 DB 대신 Redis에서 즉시 값을 읽을 수 있게 합니다.
+     */
+    @Scheduled(fixedRate = 60000) // 1분마다 실행
+    public void updateAllStockPricesToRedis() {
+        log.info(">>> [Scheduled] 전 종목 시세 Redis 동기화 시작...");
+        List<Stock> allStocks = stockRepository.findAll();
+        
+        for (Stock stock : allStocks) {
+            try {
+                // KIS API 호출 및 Redis 저장 (getStockDetail 내부 로직 활용)
+                // getStockDetail()은 내부적으로 Redis에 없으면 fetchPriceFromKisApi()를 호출함.
+                // 여기서는 강제로 최신화하기 위해 fetchPriceFromKisApi를 직접 쓰거나 
+                // 기존 캐시를 무시하고 갱신하는 로직이 필요할 수 있음.
+                
+                String symbol = stock.getStockCode();
+                StockResponseDto latest = fetchPriceFromKisApi(symbol);
+                
+                if (latest != null) {
+                    String cacheKey = "stock:price:" + symbol;
+                    String value = latest.getCurrentPrice() + ":" + 
+                                   latest.getChangeAmount() + ":" + 
+                                   latest.getChangeRate() + ":" + 
+                                   latest.getVolume();
+                    
+                    redisTemplate.opsForValue().set(cacheKey, value, Duration.ofMinutes(10));
+                }
+                
+                // KIS API 초당 호출 제한(VTS 기준 초당 20건)을 피하기 위해 약간의 지연(0.1초) 추가
+                Thread.sleep(100); 
+                
+            } catch (Exception e) {
+                log.warn("주식({}) 시세 동기화 중 오류: {}", stock.getStockCode(), e.getMessage());
+            }
+        }
+        log.info(">>> [Scheduled] 전 종목 시세 Redis 동기화 완료 (총 {}건)", allStocks.size());
     }
 
     private void ensureAccessToken() {
@@ -211,6 +389,7 @@ public class StockService {
             ensureAccessToken();
 
             String url = apiUrl + "/uapi/domestic-stock/v1/quotations/inquire-price?FID_COND_MRKT_DIV_CODE=J&FID_INPUT_ISCD=" + symbol;
+            log.info("KIS API 요청 URL: {}", url);
 
             HttpHeaders headers = new HttpHeaders();
             headers.setContentType(MediaType.APPLICATION_JSON);
@@ -221,6 +400,7 @@ public class StockService {
 
             HttpEntity<String> entity = new HttpEntity<>(headers);
             ResponseEntity<Map> response = restTemplate.exchange(url, HttpMethod.GET, entity, Map.class);
+            log.info("KIS API 응답: {}", response.getBody());
 
             if (response.getBody() != null && response.getBody().containsKey("output")) {
                 Map<String, Object> output = (Map<String, Object>) response.getBody().get("output");
@@ -237,6 +417,8 @@ public class StockService {
                         .changeRate((String) output.get("prdy_ctrt"))
                         .volume((String) output.get("acml_vol"))
                         .build();
+            } else {
+                log.warn("KIS API 응답에 output 데이터가 없습니다: {}", response.getBody());
             }
             return null;
         } catch (org.springframework.web.client.HttpClientErrorException.Unauthorized e) {
@@ -244,9 +426,18 @@ public class StockService {
             clearTokenCache();
             return fetchPriceFromKisApi(symbol); // 1회 재시도
         } catch (Exception e) {
-            log.error("API 호출 에러: {}", e.getMessage());
+            log.error("API 호출 에러: {}, 상세: {}", e.getMessage(), e.toString());
             return null;
         }
+    }
+
+    /**
+     * KIS 토큰 강제 갱신 (사용자 요청용)
+     */
+    public void refreshToken() {
+        log.info("사용자 요청에 의한 KIS 토큰 강제 갱신 시작...");
+        clearTokenCache();
+        issueAccessToken();
     }
 
     private void clearTokenCache() {
@@ -263,16 +454,17 @@ public class StockService {
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
 
-        Map<String, String> body = new HashMap<>();
-        body.put("grant_type", "client_credentials");
-        body.put("appkey", appKey);
-        body.put("appsecret", appSecret);
+        Map<String, String> bodyMap = new HashMap<>();
+        bodyMap.put("grant_type", "client_credentials");
+        bodyMap.put("appkey", appKey);
+        bodyMap.put("appsecret", appSecret);
 
-        HttpEntity<Map<String, String>> request = new HttpEntity<>(body, headers);
-        ResponseEntity<Map> response = restTemplate.postForEntity(tokenUrl, request, Map.class);
+        HttpEntity<Map<String, String>> request = new HttpEntity<>(bodyMap, headers);
+        ResponseEntity<Map<String, Object>> response = restTemplate.exchange(tokenUrl, HttpMethod.POST, request, new org.springframework.core.ParameterizedTypeReference<Map<String, Object>>() {});
 
-        if (response.getBody() != null) {
-            String token = (String) response.getBody().get("access_token");
+        Map<String, Object> resBody = response.getBody();
+        if (resBody != null) {
+            String token = (String) resBody.get("access_token");
             this.cachedAccessToken = token;
             
             String redisKey = "kis:access_token:" + appKey;
